crud récolte updated avec recherche

--- a/templates/culture/new.html.twig
+++ b/templates/culture/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FrontEnd/front.html.twig' %}
 
-{% block title %}New Culture{% endblock %}
+{% block title %}Ajouter Culture{% endblock %}
 
 {% block content %}
     <div class="container mt-4">
