--- a/templates/parcelle/index.html.twig
+++ b/templates/parcelle/index.html.twig
@@ -73,7 +73,7 @@
                                     <td>{{ parcelle.superficie | number_format(2, ',', ' ') }} m²</td>
                                     <td>
                                         <div class="d-flex align-items-center">
-                                            <i class="bi bi-geo-alt-fill text-primary me-2"></i>
+                                            <i class="lni lni-map text-primary me-2"></i>
                                             {{ parcelle.localisation }}
                                         </div>
                                     </td>
