--- a/templates/culture/edit.html.twig
+++ b/templates/culture/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FrontEnd/front.html.twig' %}
 
-{% block title %}Edit Culture{% endblock %}
+{% block title %}Modifier Culture{% endblock %}
 
 {% block content %}
     <div class="container mt-4">
