--- a/templates/recolte/_delete_form.html.twig
+++ b/templates/recolte/_delete_form.html.twig
@@ -1,4 +1,6 @@
 <form method="post" action="{{ path('app_recolte_delete', {'id': recolte.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ recolte.id) }}">
-    <button class="btn btn-danger">Delete</button>
+    <button type="submit" class="btn btn-danger">
+        <i class="bi bi-trash"></i> Supprimer
+    </button>
 </form>
